Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4462

TSHttpSchedule can cause use after free crash.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • None
    • 7.0.0
    • Core, TS API
    • None

    Description

      Yahoo! is seeing production crashes which have been tracked down to calling cancel on the pending_action of an HttpSM. This action comes from use of TSHttpSchedule which can leave a dangling object in pending_action.

      Attachments

        Issue Links

          Activity

            People

              amc Alan M. Carroll
              amc Alan M. Carroll
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: