TS-4462: Clean up pending_action for TSHttpSchedule.